--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,7 +9,7 @@
    $performance: rgb(70, 67, 64);
    $fitmingo: rgb(240, 138, 138);
    $peacock: rgb(163, 177, 178);
-   $parrot: rgb(111, 232, 188);
+   $parrot: rgb(70, 157, 112);
    
    $secondary-falcon: rgb(162, 143, 99);
    $secondary-performance: rgb(128, 80, 55);
@@ -18,7 +18,12 @@
    $secondary-parrot: rgb(243, 192, 162);
    
    $focus-shadow: 0 0 0 0.25rem rgba($primary, 0.35);
+   $falcon-focus: 0 0 0 0.25rem rgba($falcon, 0.35);
+   $performance-focus: 0 0 0 0.25rem rgba($performance, 0.35);
    $fitmingo-focus: 0 0 0 0.25rem rgba($fitmingo, 0.35);
+   $peacock-focus: 0 0 0 0.25rem rgba($peacock, 0.35);
+   $parrot-focus: 0 0 0 0.25rem rgba($parrot, 0.35);
+  
    
    $background-color: rgb(254, 254, 254);
    $text-gray: rgb(139, 139, 139);
