--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,12 +10,19 @@
    $fitmingo: rgb(240, 138, 138);
    $peacock: rgb(163, 177, 178);
    $parrot: rgb(70, 157, 112);
+   $creatina: rgb(53, 53, 53);
+   $creatina-pink: rgb(244, 189, 224);
+   $creatina-lemon: rgb(171, 215, 149);
+   $creatina-watermelon: rgb(239, 141, 142);
+   
    
    $secondary-falcon: rgb(162, 143, 99);
    $secondary-performance: rgb(128, 80, 55);
    $secondary-fitmingo: rgb(150, 40, 33);
    $secondary-peacock: rgb(241, 232, 188);
    $secondary-parrot: rgb(243, 192, 162);
+   $secondary-creatina: rgb(235, 212, 212);
+
    
    $focus-shadow: 0 0 0 0.25rem rgba($primary, 0.35);
    $falcon-focus: 0 0 0 0.25rem rgba($falcon, 0.35);
