--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,4 +6,5 @@
 @import 'components/navbar';
 @import 'components/hero';
 @import 'components/carousel';
+@import 'components/creatinas';
 @import 'components/footer';
